# roborts_project

./: .gitignore  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
install/lib/pkgconfig/: catkin_tools_prebuild.pc  cv_bridge.pc
src/: README.md
src/AlphaPose/: CMakeLists.txt  dataloader.pye  dataloader_webcam.py  dataloader_webcam.pye  demo.py  demo.sh  opt.py  posedetect_ros.py  video_demo.py  webcam_demo.py  webcam_demo.pye  webcam_demo.sh
src/AlphaPose/yolo/: detect.py  util.py  video_demo.py
src/RoboRTS/: .gitignore
src/RoboRTS/roborts_base/: roborts_base_config.h  roborts_base_node.cpp  ros_dep.h
src/RoboRTS/roborts_bringup/: package.xml
src/RoboRTS/roborts_camera/: CMakeLists.txt  calibration_cmd.txt  camera_base.h  camera_node.cpp  camera_node.h  camera_param.cpp  camera_param.h  package.xml
src/RoboRTS/roborts_camera/mvsua/: CMakeLists.txt  README.md  mvsua_driver.cpp  mvsua_driver.h
src/RoboRTS/roborts_camera/mvsua/CameraSettingTool/: Readme.md
src/RoboRTS/roborts_camera/mvsua/CameraSettingTool/QT_Demo/: QT_Demo  QT_Demo.pro  capturethread.cpp  capturethread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_capturethread.cpp  moc_mainwindow.cpp  mvsua_param.prototxt  protoloader.cpp  protoloader.h  ui_mainwindow.h
src/RoboRTS/roborts_camera/mvsua/CameraSettingTool/QT_Demo/inc/: CameraDefine.h
src/RoboRTS/roborts_camera/mvsua/CameraSettingTool/QT_Demo/proto/: MVCamera_para.proto
src/RoboRTS/roborts_camera/mvsua/MVSDK/: CameraApi.h  CameraStatus.h
src/RoboRTS/roborts_camera/video_reader/: CMakeLists.txt  video_reader.cpp  video_reader.h
src/RoboRTS/roborts_common/: CMakeLists.txt  package.xml
src/RoboRTS/roborts_costmap/: CMakeLists.txt  package.xml
src/RoboRTS/roborts_decision/: behavior_test.cpp  package.xml
src/RoboRTS/roborts_detection/: CMakeLists.txt  package.xml
src/RoboRTS/roborts_detection/armor_detection/: CMakeLists.txt  armor_detection_base.h  armor_detection_client.cpp  armor_detection_node.cpp  armor_detection_node.h  camera_base_transform.cpp  gimbal_control.cpp  gimbal_control.h  heat_control.cpp  side_detection_node.cpp  side_detection_node.h
src/RoboRTS/roborts_detection/armor_detection/config/: back_detection_blue.prototxt  front_detection_blue.prototxt  front_detection_red.prototxt  left_detection_blue.prototxt  right_detection_blue.prototxt  tf_parameter.yaml  tf_parameter_0.yaml  tf_parameter_1.yaml
src/RoboRTS/roborts_detection/armor_detection/constraint_set/: CMakeLists.txt  constraint_set.cpp  constraint_set.h
src/RoboRTS/roborts_detection/armor_detection/constraint_set/proto/: constraint_set.proto
src/RoboRTS/roborts_detection/armor_detection/kcf_track/: ffttools.hpp  fhog.cpp  fhog.hpp  kcftracker.cpp  kcftracker.hpp  labdata.hpp  recttools.hpp  tracker.h
src/RoboRTS/roborts_detection/armor_detection/proto/: armor_detection.proto  side_detecton.proto
src/RoboRTS/roborts_localization/: CMakeLists.txt  localization_config.h  localization_math.cpp  localization_math.h  localization_node.cpp  localization_node.h  log.h  package.xml  types.h
src/RoboRTS/roborts_msgs/: CMakeLists.txt  package.xml
src/RoboRTS/roborts_planning/: package.xml
src/alphaPose/: CMakeLists.txt  package.xml
src/alphaPose/src/: dataloader.py  demo.py  demo_backup.py
src/alpha_pose/: CMakeLists.txt  package.xml
src/alpha_pose/src/: dataloader.py  dataloder_ros.py  fn.py  online_demo.py  posedetect_ros.py
src/darknet_ros/darknet_ros/: CMakeLists.txt  package.xml
src/darknet_ros/darknet_ros_msgs/: CMakeLists.txt  package.xml
src/decision/: CMakeLists.txt  README.md  package.xml
src/decision/msg/: FacePosition.msg
src/decision/scripts/: battle_env.py  battle_env.py.orig  block_judge_test.py  choose_point_search_test.py  controller.py  decision_node.py.orig  enemy_detect_dual.py  enemy_detect_standalone.py  face_detection.py  fake_service.py  human_position.py  navigation_rviz.py  pose_update.py  pub_self_msg.py  rotation_parameter_test.py  teleop_twist_keyboard.py  twistControl.py
src/gesture_recognize/: detect.py
src/laser_filters/: CMakeLists.txt  laser_filters_plugins.xml  package.xml
src/laser_filters/config/: rgbd_scan_fusion.prototxt
src/laser_filters/examples/: laser_scan_angular_bounds_filter.launch  laser_scan_angular_bounds_filter.yaml  my_laser_cloud_filter.launch  pass_through_example.launch  range_filter.yaml
src/laser_filters/proto/: rgbd_scan_fusion.proto
src/laser_filters/src/: array_filter.cpp  box_filter.cpp  generic_laser_filter_node.cpp  laser_scan_filters.cpp  median_filter.cpp  rgbd_scan_fusion.cpp  scan_to_cloud_filter_chain.cpp  scan_to_scan_filter_chain.cpp
src/lidar_follower/: CMakeLists.txt  PID_param.yaml  package.xml
src/map_server/: CMakeLists.txt  catkin_make_isolated.cache  package.xml
src/rplidar_ros/: CMakeLists.txt  package.xml
(+553 files in other folders)
